# ff5m

./: README.md  addMD5.bat  mod_params.json  moonraker.conf  sync.sh  sync_remote.sh  tuning.cfg
.bin/exec/: typer
.bin/src/: CMakeLists.txt  README.md  toolchain.cmake
.bin/src/common/: text.cpp  text.h
.bin/src/common/fonts/: JetBrainsMono12ptb2.h  JetBrainsMono16ptb2.h  JetBrainsMono20ptb2.h  JetBrainsMono28ptb2.h  JetBrainsMono8ptb4.h  JetBrainsMonoBold12ptb2.h  JetBrainsMonoBold16ptb2.h  JetBrainsMonoBold20ptb2.h  JetBrainsMonoBold28ptb2.h  JetBrainsMonoBold8ptb4.h  types.h
.bin/src/splash/: generate.py
.bin/src/toolchains/: chroot-eabihf.cmake  printer-eabi.cmake
.bin/src/typer/: CMakeLists.txt  batch_protocol.cpp  batch_protocol.h  framebuffer.cpp  framebuffer.h  interactive.cpp  interactive.h  main.cpp
.bin/src/typer/tests/: batch_protocol_test.cpp  fifo_integration_test.cpp  framebuffer_test.cpp  interactive_test.cpp  test_runner.h  text_buffer_test.cpp  touch_tracker_test.cpp
.cfg/: init.display.feather.cfg  init.display.guppy.cfg
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug.yaml  feauture.yaml
.py/: backlight.py
.py/klipper/patches/: gcode.py  mcu.py
.py/klipper/patches/extras/: gcode_button.py  heaters.py  probe.py  servo.py  shaper_calibrate.py  tmc.py  virtual_sdcard.py
.py/klipper/patches/kinematics/: extruder.py
.py/klipper/plugins/: feather_joystick.py  feather_mod_settings.py  feather_motion.py  feather_screen.py  feather_screen_controls.py  feather_screen_pages.py  feather_ui.py  feather_z_calibration.py  mod_params.py  resurrection.py
.py/klipper/plugins/feather_themes/: aurora.json  cyberpunk_red.json  cyberpunk_yellow.json  dark.json  default.json  forest.json  ocean.json  pip_boy_2000.json  pip_boy_3000.json  synth.json  theme.schema.json
.root/: S35tslib  S65moonraker  S80guppyscreen  guppyscreen  moonraker.asvc  start.sh  stop.sh
.root/moonraker/components/: machine.py
.shell/: S00init  S60dropbear  S98camera  S99root  common.sh  network_common.sh  restart_klipper.sh  screen.sh
.shell/boot/: boot.sh  init_swap.sh  wifi_connect.sh
.shell/boot/zram/: README.md  swapon_prio  zram.ko  zsmalloc.ko
.shell/commands/: zchanges.sh  zdisplay.sh  znetwork.sh  zstart_klipper.sh  ztimezone.sh
KAMP/: Adaptive_Meshing.cfg  KAMP_Settings.cfg  Smart_Park.cfg
config/: feather.cfg  guppy.cfg  headless.cfg  stock.cfg
docs/: CALIBRATION.md  CONFIGURATION.md  FAQ.md  FIRMWARE_5x_COMPAT.md  INSTALL.md  MACROS.md  MOD_COMPARISON.md  PRINTING.md  RECOVERY.md  SCREEN.md  SLICING.md  TYPER.md  UNINSTALL.md
macros/: base.cfg  client.cfg  headless.cfg  shell.cfg
openwiki/: .last-update.json  architecture.md  integrations.md  quickstart.md  source-map.md  testing-and-change-guide.md
openwiki/workflows/: chroot-and-web-runtime.md  configuration-and-printing.md  feather-runtime.md  klipper-extensions.md  klipper-patching.md  operations-and-recovery.md  screens-and-feather.md
sql/: 00019-resurrection.sql
tests/: test_feather_joystick.py  test_feather_motion.py  test_feather_screen.py  test_feather_screen_controller.py  test_feather_workflows.py  test_feather_z_calibration.py  test_gcode_patch.py  test_network_scripts.py  test_screen_images.py  test_smart_park.py  test_timezone.py
tests/fixtures/: feather_draw_protocol.txt
